# ucdb

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
build_src/: code_point_description.rs  column.rs  generators.rs  mod.rs  parsers.rs
src/: ascii_hex_digit.rs  bidi_control.rs  composition_exclusion.rs  dash.rs  deprecated.rs  diacritic.rs  east_asian_width.rs  extender.rs  general_category.rs  grapheme_break.rs  hex_digit.rs  hyphen.rs  id_compat_math_continue.rs  id_compat_math_start.rs  ideographic.rs  ids_binary_operator.rs  ids_trinary_operator.rs  ids_unary_operator.rs  join_control.rs  lib.rs  line_break.rs  logical_order_exception.rs  lower_case_mapping.rs  modifier_combining_mark.rs  noncharacter_code_point.rs  other_alphabetic.rs  other_default_ignorable_code_point.rs  other_grapheme_extend.rs  other_id_continue.rs  other_id_start.rs  other_lowercase.rs  other_math.rs  other_uppercase.rs  pattern_syntax.rs  pattern_white_space.rs  prepended_concatenation_mark.rs  quotation_mark.rs  radical.rs  regional_indicator.rs  script.rs  (+10 more)
