[package]
name = "ucdb"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.ucd]
version = "16.0.0"
url = "https://www.unicode.org/Public"

[dependencies]

[profile.dev.build-override]
opt-level = 3

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
cargo_metadata = { version = "0.19" }
regex = { version = "1.11.1" }
thiserror = { version = "2.0.12" }
convert_case = { version = "0.8.0" }
